@@ -200,6 +200,8 @@ Poeple/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		author of tools/mkatlas.pl script
 	* Michal Szymerski:
 		Added support for AtlasSprite as MenuItems
+	* Michael Thornton:
+		TMXTileMap supports any kind of child. patch.
 	* mike AT finklyinteractive:
 		fixed leak in ActionManager
 	* Mitch:
